--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,6 +2,11 @@ site_name: Robust Statistics Simulator
 
 nav:
     - Home: index.md
+    - Tutorial: tutorial.md
+    - Distributions: distributions.md
+    - Estimators: estimators.md
+    - Function Reference: function_guide.md
+    - FAQ: FAQ.md
 
 repo_name: <i class="fa fa-github"></i> Github
 repo_url: https://github.com/Alcampopiano/robust_statistics_simulator
